# fpl-checker

./: Cargo.toml  Dockerfile  README.md
src/: api.rs  builders.rs  constants.rs  main.rs  models.rs  validators.rs
tests/samples/: bootstrap.json  gameweek.json  invalid_team.json  invalid_team_duplicate_arsenal.json  invalid_team_missing_burnley.json  invalid_team_missing_player_over_10m.json  invalid_team_missing_sunderland_burnley.json  picks.json  valid_team.json
