[package]
name = "fpl_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
assertor = "0.0.4"
indexmap = "2.11.0"
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
ureq = { version = "3.1.0", features = ["json"] }
tokio = "1.47.1"
