[package]
name = "fpl_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
assertor = "0.0.4"
indexmap = "2.13.0"
rand = "0.10.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.2.0", features = ["json"] }
tokio = "1.50.0"
url = "2.5.8"
