[package]
name = "fpl_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
assertor = "0.0.4"
indexmap = "2.14.0"
rand = "0.10.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.3.0", features = ["json"] }
tokio = "1.52.1"
url = "2.5.8"
